server/public/styles/stylesheet.css
body {
    font-family: "droid-sans",sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 22px;
}

.nav{
    /*max-width: 180px;*/
    /*padding: 0 0 0 20px;*/
    background-color: white;
    color: black;
    /*margin: 40px 0 0 20px;*/
    font-size: 110%;
    /*border: solid 2px black;*/
    white-space: nowrap;
    border-radius: 5px;
}

.band0 {
    margin: 0px 0 0 10px;
    padding: 7px;
    border-radius: 5px;
    max-width: 364px;
}

.band1 {
    /*max-width:220px;*/
    /*background-color: lightgray;*/
    /*padding: 20px;*/
    margin: -5px 0px 0 15px;
    padding: 7px;
    border-radius: 5px;
    min-width: 250px;
}

.band0:hover {
    background-color: blue;
    border-radius: 5px;
}
.band1:hover {
    background-color: pink;
}

.band2 {
    background-color: #ffff4e;
    /*margin: 0px 50px;*/
}
.name {
    /*margin: 0 10px;*/
    font-size: 200%;
    max-width: 360px;
    border-radius: 5px;
}

.name:hover{
    color:white;
    background-color: black;
}

.topbar {
    border: solid 2px black;
}

.projects {
    margin: 0 10px;
}
.projects:hover {
    color: #ff992f;
}

.contact:hover {
    color: #2571ff;
}

.nav2{
    background-color: white;
    color: black;
    margin: 41px 0 0 350px;
    display: none;
    font-size: 125%;
}

.project1 {
    margin-top: -10px;
}

.project1:hover {
    color: #46fc0f;
}

.project2:hover {
    color: deeppink;
}

.contacts {
    margin: 10px 0 0 20px;
    /*padding: 5px;*/
    display: none;
}

.showoff {
    margin: 25px 0 0 45px;
    background-image: url("../img/mary_fruit_stand.jpeg");
    background-repeat:no-repeat;
    background-size:contain;
    background-position:center;
    width: auto;
    height: 472px;
    display: none;
    white-space: nowrap;
    /*position: relative;*/
}

.projectCopy {
    padding: 2%;
    /*border: dotted 2px black;*/
    margin: 50% 0 0 25%;
    display: inline-block;
    font-family: "droid-sans",sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 220%;
    color: #2f4eff;
    background-color: black;
}

.row {
    clear: both;
}

ul {
    list-style: none;
    padding-left:0;
}

li {
    display: inline;
}

.closebutton {
    display: block;
    width: 20px;
    height: 20px;
    font-size: 1.3rem;
    margin: 0 0 0 -13px;
}

.closebutton:hover {
    color: red;
}

.sticky {
    position: fixed;
    width: 100%;
    top: 0;
    z-index:1001;
    background-color: white;
}

@media only screen and (max-width: 770px) {

    body { font-size: 15px; }
    .showoff {
        height: 236px;
        width: 315px;
        /*background-image: url("../img/mary_fruit_stand_sm.jpeg");*/
        margin-left: 10px;
    }
    .projectCopy {font-size: 200%;}
    /*li { display: inline; }*/
    .nav {
        font-size: 100%;
        /*margin: 35px 0 0 20px;*/
    }
    /*.nav2 {margin-top: 10px;}*/

}

.test {
    border: solid 2px black;
}

